--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.13.0",
+    "mongo-sanitize": "^1.0.0",
+    "mongodb": "^3.1.3",
+    "mongoose": "^5.2.9",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
